--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -16,6 +16,7 @@
               <%= number_to_currency(product.price) %>
               <%# <%= sprintf("$%0.02f", product.price) %>
               <%# <%= product.price %>
+              <%= button_to 'Add to Cart', line_items_path(product_id: product) %>
             </div>
         </li>
       <% end %>
